Add jwt support
Signed-off-by: Arnav Gupta <arnav@codingblocks.com>

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/coding-blocks-archives/Realworld_NodeJS_Sequelize#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mysql2": "^1.6.4",
     "sequelize": "^4.42.0"
   }
